cursive-bootstrap/tests/ui/E-MOD/E-MOD-2452.cursive
// RUN: compile-fail
// DIAG: E-MOD-2452
// SPEC: 8.2
// DESC: Attribute not valid on target declaration kind

[[inline]]  //~ ERROR E-MOD-2452: attribute wrong target
record BadAttr {
    value: i32
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
